remove memcached; it is unneeded unless sharding

--- a/marconi.conf
+++ b/marconi.conf
@@ -22,11 +22,11 @@ log_file = /var/log/marconi.log
 #syslog_log_facility = LOG_LOCAL0
 
 [oslo_cache]
-cache_backend = memcached
+cache_backend = memory
 # this can be removed once we are 100% ok with running
 # memcached locally
 # memcache_servers_remote = ''
-memcache_servers = 'localhost:11211'
+#memcache_servers = 'localhost:11211'
 
 [drivers]
 # Transport driver module (e.g., wsgi, zmq)
